--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "express-validation": "^4.1.1",
+    "express-validator": "^7.2.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "path": "^0.12.7"
