--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
+    "multer": "^2.0.2",
     "path": "^0.12.7"
   }
 }
